<resources>
  <string name="app_name">Snackbar Sample</string>
  <string name="action_settings">Settings</string>
  <string name="snackbar_with_action">Snackbar with action</string>
  <string name="simple_snackbar">Simple Snackbar</string>
  <string name="snackbar_action">Action</string>
  <string name="snackbar_backgroundcolor">Snackbar alternative background color</string>
  <string name="snackbar_long_duration">Snackbar long duration</string>
  <string name="snackbar_textcolor">Snackbar alternative text color</string>
  <string name="onclick_snackbar_action">onClick Snackbar action</string>


</resources>
