<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SnackbarSampleActivity"
    >

  <Button
      android:id="@+id/btnSimpleSnackbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/simple_snackbar"
      />

  <Button
      android:id="@+id/btnSnackbarWithAction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/snackbar_with_action"
      />

  <Button
      android:id="@+id/btnSnackbarLongDuration"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/snackbar_long_duration"
      />

  <Button
      android:id="@+id/btnSnackbarAlternativeBackgroundColor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/snackbar_backgroundcolor"
      />

  <Button
      android:id="@+id/btnSnackbarAlternativeTextColor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/snackbar_textcolor"
      />

</LinearLayout>
